<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpi_cpp_hardware</name>
  <version>0.0.0</version>
  <description>ROS 2 hardware package for RPi robot control.</description>
  <maintainer email="user@raspberrypi.local">grower</maintainer>
  <license>TODO: License declaration</license>

  <!-- BUILD TOOL DEPENDENCIES -->
  <buildtool_depend>ament_cmake</buildtool_depend> 
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!--
  CORE DEPENDENCIES: Use <depend> for packages needed by both C++ compiler (build) and runtime (exec).
  This resolves the 'redundant with: exec_depend' error.
  -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> <!-- Added back as it's needed for motor commands -->
  
  <!-- ROS 2 Control Dependencies -->
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_components</depend>

  <!-- EXECUTION DEPENDENCIES: Use <exec_depend> only for things needed at runtime that are NOT in <depend> -->
  <exec_depend>ros2launch</exec_depend> 

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
