<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpi_cpp_hardware</name>
  <version>0.0.0</version>
  <description>ROS 2 hardware package for RPi robot control.</description>
  <maintainer email="user@raspberrypi.local">grower</maintainer>
  <license>TODO: License declaration</license>

  <!-- BUILD TOOL DEPENDENCIES: Only for tools like ament_cmake. -->
  <buildtool_depend>ament_cmake</buildtool_depend> 

  <!-- BUILD DEPENDENCIES: For packages needed by the C++ compiler and message generation. -->
  <!-- FIX: Moved rosidl_default_generators here from buildtool_depend -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- CORE DEPENDENCIES: Used for both build and runtime. -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_components</depend>

  <!-- EXECUTION DEPENDENCIES: For packages needed ONLY at runtime. -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend> 

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- CRITICAL EXPORT BLOCK -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- This line is now correctly positioned and should be recognized. -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
